--- a/index.html
+++ b/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Av1</title>
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-
-        <header>
-
-            <div class="titulo">
-            AV1
-            </div>
-
-        </header>
-
-        <div class="texto">
-            <h1>texto 1</h1>
-            <p>texto 2</p>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meus Objetivos do ano</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <section class="conteudo-principal">
+        <h2 class="titulo-orincipal">Meus objetivos do ano_</h2>
+        <div class="botoes">
+            <button class="botao">ir para a academia</button>
+            <button class="botao">ir bem em todos os trimestres</button>
+            <button class="botao">comprar um ceular novo</button>
+            <button class="botao">aprender um idioma novo</button>
         </div>
-
-        <p>texto final</p>
-
-    </body>
+    </section>
+</body>
 </html>
