--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="conteudo-principal">
+    <section class="conteudo.principal">
         <h2 class="titulo-orincipal">Meus objetivos do ano_</h2>
         <div class="botoes">
             <button class="botao">ir para a academia</button>
