--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-orincipal">Meus objetivos do ano_</h2>
+        <h2 class="titulo-orincipal">Meus objetivos do ano<span></span>_</h2>
         <div class="botoes">
             <button class="botao">ir para a academia</button>
             <button class="botao">ir bem em todos os trimestres</button>
