--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section class="conteudo-principal">
         <h2 class="titulo-orincipal">Meus objetivos do ano<span>_</span></h2>
         <div class="botoes">
-            <button class="botao">ir para a academia</button>
+            <button class="botao ativo">ir para a academia</button>
             <button class="botao">ir bem em todos os trimestres</button>
             <button class="botao">comprar um ceular novo</button>
             <button class="botao">aprender um idioma novo</button>
