--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             <button class="botao">aprender um idioma novo</button>
         </div>
     </section>
+    <script src="main.js"></script>
 </body>
 </html>
