--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
             <button class="botao">comprar um ceular novo</button>
             <button class="botao">aprender um idioma novo</button>
         </div>
+        <div class="aba-textos">
+            <div class="aba-conteudo ativo">
+                <h3 class="aba-conteudo-titulo-principal">ir para a academia</h3>
+                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">ir bem em todos os trimestres</h3>
+                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">comprar um celular novo</h3>
+                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+            </div>
+            <div class="aba-conteudo">
+                <h3 class="aba-conteudo-titulo-principal">aprender um novo idioma</h3>
+                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+
+        </div>
     </section>
     <script src="main.js"></script>
 </body>
