--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <div class="aba-textos">
             <div class="aba-conteudo ativo">
                 <h3 class="aba-conteudo-titulo-principal">ir para a academia</h3>
-                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">ir bem em todos os trimestres</h3>
-                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">comprar um celular novo</h3>
-                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
             </div>
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">aprender um novo idioma</h3>
-                <h4 ckass="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
+                <h4 class="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
 
         </div>
     </section>
