--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <section class="conteudo-principal">
-        <h2 class="titulo-orincipal">Meus objetivos do ano<span>_</span></h2>
+        <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
         <div class="botoes">
             <button class="botao ativo">ir para a academia</button>
             <button class="botao">ir bem em todos os trimestres</button>
             <button class="botao">comprar um ceular novo</button>
             <button class="botao">aprender um idioma novo</button>
+      
+      
         </div>
         <div class="aba-textos">
             <div class="aba-conteudo ativo">
