--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
             <button class="botao">ir bem em todos os trimestres</button>
             <button class="botao">comprar um ceular novo</button>
             <button class="botao">aprender um idioma novo</button>
-      
-      
         </div>
         <div class="aba-textos">
             <div class="aba-conteudo ativo">
@@ -36,8 +34,8 @@
             <div class="aba-conteudo">
                 <h3 class="aba-conteudo-titulo-principal">aprender um novo idioma</h3>
                 <h4 class="aba-conteudo-titulo-secundario">Tempo para realizar o objetivo</h4>
-                <div class="contador"> </div>
-
+                <div class="contador"> 
+          </div>
         </div>
     </section>
     <script src="main.js"></script>
